--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,11 @@
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
   </head>
   <style>
-
+      *{
+        box-sizing: border-box;
+        margin: 0;
+        padding: 0;
+      }
     .user-message {
     background-color: #1980e6;
     color: white;
